# pyaid

./: sample.py  setup.cfg
pyaid/: __init__.py  functions.py  slicer.py
