[metadata]
name = pyaid
version = attr:pyaid.__version__
author = lotcarnage
author_email =lotcarnage@gmail.com
description = python aiding package
long_description = file:README.md
url = https://github.com/lotcarnage/pyaid
license = MIT License
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    
[options]
zip_safe = False
packages = find: